--- a/yudada-backend/src/main/resources/application-prod.yml
+++ b/yudada-backend/src/main/resources/application-prod.yml
@@ -5,20 +5,50 @@ server:
   port: 8101
 spring:
   # 数据库配置
-  # todo 需替换配置
+  # 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yudada
+    url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada
     username: root
-    password: 123456
+    password: 13979047952AsS!
   # Redis 配置
-  # todo 需替换配置
+  #  需替换配置
   redis:
     database: 1
     host: localhost
     port: 6379
     timeout: 5000
-    password: 123456
+  # 分库分表配置
+  shardingsphere:
+    #数据源配置
+    datasource:
+      # 多数据源以逗号隔开即可
+      names: yudada
+      yudada:
+        type: com.zaxxer.hikari.HikariDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        jdbc-url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada
+        username: root
+        password: 13979047952AsS!
+    # 规则配置
+    rules:
+      sharding:
+        # 分片算法配置
+        sharding-algorithms:
+          # 自定义分片规则名
+          answer-table-inline:
+            ## inline 类型是简单的配置文件里面就能写的类型，其他还有自定义类等等
+            type: INLINE
+            props:
+              algorithm-expression: user_answer_$->{appId % 2}
+        tables:
+          user_answer:
+            actual-data-nodes: yudada.user_answer_$->{0..1}
+            # 分表策略
+            table-strategy:
+              standard:
+                sharding-column: appId
+                sharding-algorithm-name: answer-table-inline
 mybatis-plus:
   configuration:
     # 生产环境关闭日志
