--- a/yudada-backend/src/main/resources/application-prod.yml
+++ b/yudada-backend/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ spring:
   # 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada
     username: root
     password: 13979047952sS!
   # Redis 配置
@@ -27,7 +27,7 @@ spring:
       yudada:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+        jdbc-url: jdbc:mysql://sh-cynosdbmysql-grp-9vhjkuqc.sql.tencentcdb.com:28323/yudada
         username: root
         password: 13979047952sS!
     # 规则配置
